--- a/src/Styles/FirstChild.module.css
+++ b/src/Styles/FirstChild.module.css
@@ -3,7 +3,7 @@
   padding: 1rem 0;
   width: 88%;
   height: 70%;
-  background-color: rgb(134, 53, 53);
+  background-color: rgba(134, 53, 53, 0.473);
   border-radius: 8px;
 }
 
