--- a/src/Styles/StoreComponent.module.css
+++ b/src/Styles/StoreComponent.module.css
@@ -12,3 +12,8 @@
   color: rgb(243, 243, 243);
   margin: 0;
 }
+
+.storeData {
+  color: rgb(243, 243, 243);
+  font-family: 'Alata', sans-serif;
+}
