--- a/src/Styles/FinalComponent.module.css
+++ b/src/Styles/FinalComponent.module.css
@@ -15,6 +15,8 @@
   letter-spacing: 2px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.479);
   margin: 0 0 2rem;
+  width: 70%;
+  margin: 0 auto 1rem;
 }
 .label {
   color: rgb(248, 248, 248);
