--- a/src/Styles/FinalComponent.module.css
+++ b/src/Styles/FinalComponent.module.css
@@ -17,6 +17,7 @@
   margin: 0 0 2rem;
   width: 70%;
   margin: 0 auto 1rem;
+  text-align-last: center;
 }
 .label {
   color: rgb(248, 248, 248);
@@ -40,7 +41,7 @@
   background-color: rgb(56, 12, 85);
 
   margin: 0 auto;
-
+  font-family: 'Alata', sans-serif;
   padding: 8px 16px;
   border-radius: 8px;
   border: none;
