--- a/src/Styles/FinalComponent.module.css
+++ b/src/Styles/FinalComponent.module.css
@@ -15,9 +15,9 @@
   letter-spacing: 2px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.479);
   margin: 0 0 2rem;
-  width: 70%;
+  width: 65%;
   margin: 0 auto 1rem;
-  text-align-last: center;
+  text-align: center;
 }
 .label {
   color: rgb(248, 248, 248);
@@ -39,7 +39,6 @@
 
 .button {
   background-color: rgb(56, 12, 85);
-
   margin: 0 auto;
   font-family: 'Alata', sans-serif;
   padding: 8px 16px;
